# rust-color-example

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: release-app.yaml  rust-app.yaml
src/: main.rs
