[package]
name = "rust-color-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rocket = {version = "0.5.0-rc.1", features = ["json"]}
serde = {version = "1.0.136", features = ["derive"]}
actix-web = "3.3.3"
phf = { version = "0.10", features = ["macros"]}
